@@ -1,5 +1,11 @@
 2012-10-07  Ramon Casero  <rcasero@gmail.com>
 
+	* matlab/VectorWrapper.h: (v0.2.1)
+	* Add matlab/VectorWrapper.hxx: (v0.1.0)
+
+	- Separate declaration from definition of the functions and
+	methods, to make the code more readable.
+
 	* matlab/GerardusCommon.h: (v0.9.0)
 
 	- Add printSeq(), function to print the content of any sequence
